<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/toolbar_search_ingredients"
        android:id="@+id/searchItem"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/clearIngredientItem"
        android:icon="@drawable/ic_clear_all"
        android:title="@string/menu_clear_ingredients_list"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/likeItem"
        android:icon="@drawable/ic_like_disable"
        android:title="@string/menu_like_social_media"
        app:showAsAction="ifRoom"
        />

</menu>