<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/matching_definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/recipe_matching_definition"
            android:textColor="@color/black_three"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/green_matching_principal"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:background="@drawable/border_green"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/recipe_list_item_matching"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/green_matching_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:gravity="start|center"
                android:textSize="12sp"
                android:text="@string/recipe_green_matching"
                android:textColor="@color/black_three"
                 />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/orange_matching_principal"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:background="@drawable/border_orange"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/recipe_item_orange_matching"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orange_matching_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:gravity="start|center"
                android:textSize="12sp"
                android:text="@string/recipe_orange_matching"
                android:textColor="@color/black_three"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/red_matching_principal"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:background="@drawable/border_red"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/recipe_item_red_matching"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/red_matching_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:gravity="start|center"
                android:textSize="12sp"
                android:text="@string/recipe_red_matching"
                android:textColor="@color/black_three"
                 />

        </LinearLayout>

        <Button
            android:id="@+id/ok_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:text="@string/general_close"
            android:textAllCaps="true"
            android:textSize="16sp" />
    </LinearLayout>

</FrameLayout>