<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/toolbar_background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/nav_header_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/default_title_size"
        android:layout_marginTop="@dimen/default_large_margin"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nav_header_app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="start">

        <ImageView
            android:id="@+id/nav_header_profile_image"
            android:layout_width="62dp"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/default_margin"
            android:contentDescription="@string/description_image"
            app:srcCompat="@drawable/ic_anon_user_48dp" />


        <TextView
            android:id="@+id/nav_header_FirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            tools:text="@string/firstname"
            android:textColor="@color/black_three"
            android:layout_marginStart="@dimen/default_large_margin"
            app:layout_constrainedWidth="true"/>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>