<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:text="http://schemas.android.com/tools"
    android:id="@+id/recipe_list_database_row_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"

    android:orientation="vertical"
    app:cardCornerRadius="0dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">


    <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmer_view_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
        app:shimmer_auto_start="true"

         >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_large_margin"
            android:contentDescription="@string/description_image"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_anon_user_48dp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            text:tools="@string/social_media_username_post"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/default_large_margin"
            app:layout_constraintStart_toEndOf="@id/profile_image"
            app:layout_constraintTop_toTopOf="@id/profile_image"
            app:layout_constraintBottom_toBottomOf="@id/profile_image"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/default_text_size" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:layout_marginTop="@dimen/default_large_margin"
            android:contentDescription="@string/recipe_list_item_image"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:background="@color/colorGrey" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:maxLines="2"
            android:layout_marginTop="@dimen/default_margin"
            text:tools="@string/recipe_list_item_label"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            app:layout_constraintRight_toRightOf="parent"/>




        <ImageView
            android:id="@+id/like_number_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/recipe_list_item_image"
            app:layout_constraintTop_toBottomOf="@id/image"
            android:layout_marginTop="@dimen/default_large_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/title"
            app:srcCompat="@drawable/ic_like_enable"
            />


        <ImageView
            android:id="@+id/delete_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/description_image"
            app:layout_constraintTop_toTopOf="@id/username"
            app:layout_constraintBottom_toBottomOf="@id/username"
            app:layout_constraintRight_toRightOf="@id/title"
            app:srcCompat="@drawable/ic_delete_black_24dp"
            android:tint="@color/black_three"
            />

        <ImageView
            android:id="@+id/update_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/description_image"
            app:layout_constraintTop_toTopOf="@id/profile_image"
            app:layout_constraintBottom_toBottomOf="@id/profile_image"
            app:layout_constraintRight_toLeftOf="@id/delete_button"
            app:srcCompat="@drawable/ic_update_black_24dp"

            />


        <TextView
            android:id="@+id/like_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"

            text:tools="@string/social_media_like_number_tips"
            app:layout_constraintLeft_toRightOf="@id/like_number_image"
            app:layout_constraintTop_toTopOf="@id/like_number_image"
            app:layout_constraintBottom_toBottomOf="@id/like_number_image"/>


        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:layout_marginTop="@dimen/default_margin"
            text:tools="@string/social_media_description_tips_post"
            app:layout_constraintLeft_toLeftOf="@id/title"
            app:layout_constraintRight_toRightOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />



    </androidx.constraintlayout.widget.ConstraintLayout>


    </com.facebook.shimmer.ShimmerFrameLayout>


</androidx.cardview.widget.CardView>